# nnlab

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: docs.yml
docs/source/: conf.py  index.rst
docs/source/api/: activations.rst  features.rst  index.rst  kernels.rst  layers.rst  losses.rst  modules.rst  optimizers.rst  training.rst
nnlab/activations/: __init__.py  base.py  parameterized.py
nnlab/features/: __init__.py  base.py  spectrogram.py
nnlab/initializers/: __init__.py  base.py  he.py  xavier.py
nnlab/kernels/: __init__.py  arctangent.py  base.py  gaussian_cdf.py  gaussian_rbf.py  logistic.py  piecewise_linear.py  polynomial.py
nnlab/layers/: __init__.py  activation.py  base.py  dense.py
nnlab/losses/: __init__.py  base.py  huber.py  log_cosh.py  mae.py
nnlab/models/: __init__.py  base.py  feedforward.py
nnlab/optimizers/: __init__.py  base.py  sgd.py
nnlab/training/: trainer.py
nnlab/visualization/: __init__.py  activation.py
notebooks/: 00_getting_started.ipynb  01_training_a_single_neuron.ipynb  02_training_a_feedforward_network.ipynb  03_comparing_activation_kernels.ipynb  04_exploring_network_architecture.ipynb  05_exploring_optimization_methods.ipynb  06_drone_sensor_health_monitoring.ipynb  audio_01_audio_signal_basics.ipynb  audio_02_spectrogram_features.ipynb  audio_03_audio_event_classifier.ipynb  audio_04_nnlab_audio_experiments.ipynb
tests/: test_activation.py  test_features.py  test_initializers.py  test_kernels.py  test_layers.py  test_losses.py  test_models.py  test_optimizers.py  test_training.py
(+5 files in other folders)
